# projeto-multi

./: Cargo.toml  Readme.md  package-lock.json  package.json
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: ProjectApi.js  UserApi.js
frontend/src/components/: ProjectForm.jsx  ProjectList.jsx  Ranking.jsx  StarForm.jsx  UpdateUserForm.jsx  UserForm.jsx  UserList.jsx  VoteForm.jsx
local_src/: main.rs  project.rs  storage.rs
profile-contract/: Cargo.toml  meta.toml
profile-contract/meta/: Cargo.toml
profile-contract/meta/src/: main.rs
profile-contract/output/: profile-contract.abi.json  profile-contract.imports.json  profile-contract.mxsc.json  profile-contract.wasm
profile-contract/scenarios/: profile_contract.scen.json
profile-contract/src/: Project.rs  ProjectModel.rs  Star.rs  Storage.rs  User.rs  UserModel.rs  lib.rs
profile-contract/src/Models/: ProjectModel.rs  UserModel.rs
profile-contract/tests/: profile_contract_scenario_go_test.rs  profile_contract_scenario_rs_test.rs
profile-contract/wasm/: Cargo.toml
profile-contract/wasm/src/: lib.rs
src/: handlers.rs  main.rs  models.rs  storage.rs  user.rs
