[package]
name = "projeto-multi"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
lazy_static = "1.4"
actix-cors = "0.6"
chrono = { version = "0.4", features = ["serde"] }

