[package]
name = "profile-contract"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["you"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.57.0"

[dev-dependencies]
num-bigint = "0.4"

[dependencies]
multiversx-sc-codec = "0.22.0"



[dev-dependencies.multiversx-sc-scenario]
version = "0.57.0"

[workspace]
members = [
    ".",
    "meta",
]
